# ctx

./: .gitignore  README.md  pyproject.toml  shell.nix
src/ctx/: __init__.py  cli.py  config.py  db.py  git.py  models.py
src/ctx/context/: __init__.py  builder.py  search.py
src/ctx/review/: __init__.py  status.py
src/ctx/scanner/: __init__.py  base.py  python_scanner.py  universal_ctx_scanner.py
tests/: conftest.py  test_cli.py  test_db_search.py  test_marker_attachment.py  test_python_scanner.py  test_universal_scanner.py
